--- a/jormungandr-integration-tests/Cargo.toml
+++ b/jormungandr-integration-tests/Cargo.toml
@@ -5,6 +5,7 @@ authors = [ "dev@iohk.io" ]
 edition = "2018"
 
 [dependencies]
+escargot = "0.5"
 grpc            = "0.6.1"
 protobuf        = "=2.8.2"
 futures         = "~0.1"
