--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -1,4 +1,5 @@
 on:
+  push:
   schedule:
     - cron: '0 3 * * *' # run at 3 AM UTC
 
@@ -7,7 +8,6 @@ name: Nightly Release
 jobs:
   nightly_release:
     name: Create nightly release
-    if: ${{ github.repository_owner == 'input-output-hk' }}
     runs-on: ubuntu-latest
     outputs:
       upload_url: ${{ steps.create_nightly.outputs.upload_url }}
@@ -46,7 +46,6 @@ jobs:
 
   update_deps:
     name: Update dependencies
-    if: ${{ github.repository_owner == 'input-output-hk' }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -93,7 +92,6 @@ jobs:
 
   release_assets:
     name: Release assets
-    if: ${{ github.repository_owner == 'input-output-hk' }}
     needs: [nightly_release, update_deps]
     runs-on: ${{ matrix.config.os }}
     strategy:
