--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,7 @@ name: Release
 jobs:
   initial_release:
     name: Create base release
-    if: ${{ github.repository_owner == 'input-output-hk' }}
+    if: ${{ secrets.BUILD_RELEASES == 'true' }}
     runs-on: ubuntu-latest
     outputs:
       upload_url: ${{ steps.create_release.outputs.upload_url }}
@@ -26,7 +26,7 @@ jobs:
 
   update_deps:
     name: Update dependencies
-    if: ${{ github.repository_owner == 'input-output-hk' }}
+    if: ${{ secrets.BUILD_RELEASES == 'true' }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -73,7 +73,7 @@ jobs:
 
   release_assets:
     name: Release assets
-    if: ${{ github.repository_owner == 'input-output-hk' }}
+    if: ${{ secrets.BUILD_RELEASES == 'true' }}
     needs: [initial_release, update_deps]
     runs-on: ${{ matrix.config.os }}
     strategy:
