--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -7,7 +7,7 @@ name: Nightly Release
 jobs:
   create_release:
     name: Create nightly release
-    if: ${{ secrets.BUILD_RELEASES == 'true' }}
+    if: ${{ github.repository_owner == 'input-output-hk' }}
     runs-on: ubuntu-latest
     outputs:
       release_date: ${{ steps.version.outputs.date }}
@@ -62,7 +62,7 @@ jobs:
 
   update_deps:
     name: Update dependencies
-    if: ${{ secrets.BUILD_RELEASES == 'true' }}
+    if: ${{ github.repository_owner == 'input-output-hk' }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -109,7 +109,7 @@ jobs:
 
   build_assets:
     name: Build assets
-    if: ${{ secrets.BUILD_RELEASES == 'true' }}
+    if: ${{ github.repository_owner == 'input-output-hk' }}
     needs: [create_release, update_deps]
     runs-on: ${{ matrix.config.os }}
     strategy:
@@ -290,7 +290,7 @@ jobs:
 
   publish_release:
     name: Publish nightly release
-    if: ${{ secrets.BUILD_RELEASES == 'true' }}
+    if: ${{ github.repository_owner == 'input-output-hk' }}
     needs: [create_release, build_assets]
     runs-on: ubuntu-latest
     steps:
