--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,7 @@ name: Release
 jobs:
   create_release:
     name: Create draft release
-    if: ${{ github.repository_owner == 'input-output-hk' }}
+    # if: ${{ github.repository_owner == 'input-output-hk' }}
     runs-on: ubuntu-latest
     outputs:
       version: ${{ steps.version.outputs.version }}
@@ -35,7 +35,7 @@ jobs:
 
   update_deps:
     name: Update dependencies
-    if: ${{ github.repository_owner == 'input-output-hk' }}
+    # if: ${{ github.repository_owner == 'input-output-hk' }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -82,7 +82,7 @@ jobs:
 
   build_assets:
     name: Build assets
-    if: ${{ github.repository_owner == 'input-output-hk' }}
+    # if: ${{ github.repository_owner == 'input-output-hk' }}
     needs: [create_release, update_deps]
     runs-on: ${{ matrix.config.os }}
     strategy:
@@ -249,7 +249,7 @@ jobs:
 
   publish_release:
     name: Publish release
-    if: ${{ github.repository_owner == 'input-output-hk' }}
+    # if: ${{ github.repository_owner == 'input-output-hk' }}
     needs: [create_release, build_assets]
     runs-on: ubuntu-latest
     steps:
