--- a/.github/workflows/release-builder.yml
+++ b/.github/workflows/release-builder.yml
@@ -1,45 +1,50 @@
 on:
-  push:
-    tags:
-      - 'v[0-9]+.*' # Push events to matching v*, i.e. v1.0, v20.15.10
+  release:
+    types: [created]
 
-name: Release
+name: Release Builder
 
 jobs:
-  create_release:
-    name: Create draft release
-    if: >
-      github.repository_owner == 'input-output-hk'
-      || startsWith(github.event.head_commit.message, 'TEST CI:')
+
+  release_info:
+    name: Get release information
     runs-on: ubuntu-latest
     outputs:
-      version: ${{ steps.version.outputs.version }}
-      upload_url: ${{ steps.create_release.outputs.upload_url }}
+      version: ${{ steps.get_version.outputs.version }}
     steps:
-      - name: Get version from tag name
-        id: version
-        run: echo "::set-output name=version::${GITHUB_REF#refs/tags/v}"
-
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Create release
-        id: create_release
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+      - id: get_version
+        name: Get version
+        shell: python
         run: |
-          release_tag=${GITHUB_REF#refs/tags/}
-          hub release create --draft \
-            -m "Release ${{ steps.version.outputs.version }} (in progress)" \
-            $release_tag
-          upload_url=$(hub release show -f '%uA' $release_tag)
-          echo "::set-output name=upload_url::$upload_url"
+          from __future__ import print_function
+          import json, os, re, sys
+          from subprocess import Popen, PIPE
+          tag = re.sub(r'^refs/tags/', '', os.getenv('GITHUB_REF'))
+          match = re.match(r'v(\d+\.\d+\.\d+(-.*)?)$', tag)
+          if match:
+            version = match.group(1)
+          else:
+            match = re.match(r'nightly\.\d{6}$', tag)
+            if match:
+              p = Popen(
+                'cargo read-manifest --manifest-path jormungandr/Cargo.toml',
+                shell=True,
+                stdout=PIPE
+              )
+              d = json.load(p.stdout)
+              version = re.sub(
+                r'^(\d+\.\d+\.\d+)(-.*)?$',
+                r'\1-' + match.group(0),
+                d['version'],
+                count=1
+              )
+            else:
+              print('::error::unrecognized release tag format {0}'.format(tag))
+              sys.exit(1)
+          print('::set-output name=version::' + version)
 
   update_deps:
     name: Update dependencies
-    if: >
-      github.repository_owner == 'input-output-hk'
-      || startsWith(github.event.head_commit.message, 'TEST CI:')
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -49,9 +54,11 @@ jobs:
 
       - id: cargo-registry
         name: Cache cargo registry
-        uses: actions/cache@v1
+        uses: actions/cache@v2
         with:
-          path: ~/.cargo/registry
+          path: |
+            ~/.cargo/registry/index
+            ~/.cargo/registry/cache
           key: cargo-registry-${{ hashFiles('Cargo.lock') }}
 
       - if: ${{ steps.cargo-registry.outputs.cache-hit != 'true' }}
@@ -67,29 +74,19 @@ jobs:
           echo "::set-output name=head::$commit"
       - if: ${{ steps.cargo-registry.outputs.cache-hit != 'true' }}
         name: Cache cargo registry index
-        uses: actions/cache@v1
+        uses: actions/cache@v2
         with:
           path: ~/.cargo/registry/index
           key: cargo-index-${{ steps.ls-crates-io-index.outputs.head }}
-          restore-keys: |
-            cargo-index-
+          restore-keys: cargo-index-
 
       - if: ${{ steps.cargo-registry.outputs.cache-hit != 'true' }}
         name: Fetch dependencies
         run: cargo fetch --locked
 
-      - if: ${{ steps.cargo-registry.outputs.cache-hit != 'true' }}
-        name: Prune unpacked sources of dependency crates from cache
-        shell: bash
-        run: |
-          rm -rf ~/.cargo/registry/src
-
   build_assets:
     name: Build assets
-    if: >
-      github.repository_owner == 'input-output-hk'
-      || startsWith(github.event.head_commit.message, 'TEST CI:')
-    needs: [create_release, update_deps]
+    needs: [release_info, update_deps]
     runs-on: ${{ matrix.config.os }}
     strategy:
       fail-fast: false
@@ -154,6 +151,7 @@ jobs:
           #   toolchain: stable
           #   cross: true
     steps:
+
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: ${{ matrix.toolchain }}
@@ -169,21 +167,16 @@ jobs:
       # https://github.com/actions/runner/issues/498
       - if: ${{ runner.os == 'Windows' }}
         name: Fix up Cargo.lock hash
-        shell: powershell
         run: |
           ((Get-Content Cargo.lock) -join "`n") + "`n" |
           Set-Content -NoNewline Cargo.lock
 
-      # https://github.com/actions/virtual-environments/issues/895
-      # https://github.com/actions/virtual-environments/issues/936
-      - if: ${{ runner.os == 'Windows' }}
-        name: Clean up cargo registry files
-        run: rm -r -fo $env:UserProfile\.cargo\registry
-
       - name: Restore cargo registry
-        uses: actions/cache@v1
+        uses: actions/cache@v2
         with:
-          path: ~/.cargo/registry
+          path: |
+            ~/.cargo/registry/index
+            ~/.cargo/registry/cache
           key: cargo-registry-${{ hashFiles('Cargo.lock') }}
 
       - name: Create .cargo/config.toml
@@ -195,12 +188,26 @@ jobs:
           rustflags = ["-C", "target-cpu=${{ matrix.target_cpu }}", "-C", "lto"]
           EOF
 
+      - if: ${{ matrix.cross }}
+        name: Create Cross.toml
+        shell: bash
+        run: |
+          cat > Cross.toml <<EOF
+          [build.env]
+          passthrough = ["DATE"]
+          EOF
+
+      - name: Get current date
+        shell: bash
+        run: |
+          echo "::set-env name=DATE::$(date +%Y%m%d)"
+
       - name: Build jormungandr
         uses: actions-rs/cargo@v1
         with:
           use-cross: ${{ matrix.cross }}
           command: build
-          args: |
+          args: >
             --manifest-path jormungandr/Cargo.toml
             --bin jormungandr
             --no-default-features
@@ -214,7 +221,7 @@ jobs:
         with:
           use-cross: ${{ matrix.cross }}
           command: build
-          args: |
+          args: >
             --manifest-path jcli/Cargo.toml
             --bin jcli
             --verbose
@@ -225,7 +232,7 @@ jobs:
       - name: Pack binaries (Unix)
         if: matrix.config.os != 'windows-latest'
         run: |
-          archive=jormungandr-${{ needs.create_release.outputs.version }}-${{ matrix.config.target }}-${{ matrix.target_cpu }}.tar.gz
+          archive=jormungandr-${{ needs.release_info.outputs.version }}-${{ matrix.config.target }}-${{ matrix.target_cpu }}.tar.gz
           tar -C ./target/${{ matrix.config.target }}/release -czvf $archive jormungandr jcli
           echo "::set-env name=RELEASE_ARCHIVE::$archive"
           echo "::set-env name=RELEASE_CONTENT_TYPE::application/gzip"
@@ -233,7 +240,7 @@ jobs:
       - name: Pack binaries (Windows)
         if: matrix.config.os == 'windows-latest'
         run: |
-          $archive = "jormungandr-${{ needs.create_release.outputs.version }}-${{ matrix.config.target }}-${{ matrix.target_cpu }}.zip"
+          $archive = "jormungandr-${{ needs.release_info.outputs.version }}-${{ matrix.config.target }}-${{ matrix.target_cpu }}.zip"
           $args = @{
             Path  = "./target/${{ matrix.config.target }}/release/jormungandr.exe",
                     "./target/${{ matrix.config.target }}/release/jcli.exe"
@@ -243,32 +250,28 @@ jobs:
           echo "::set-env name=RELEASE_ARCHIVE::$archive"
           echo "::set-env name=RELEASE_CONTENT_TYPE::application/zip"
 
-      - name: Upload binaries to release
+      - name: Upload binaries to nightly release
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ needs.create_release.outputs.upload_url }}
+          upload_url: ${{ github.event.release.upload_url }}
           asset_path: ./${{ env.RELEASE_ARCHIVE }}
           asset_name: ${{ env.RELEASE_ARCHIVE }}
           asset_content_type: ${{ env.RELEASE_CONTENT_TYPE }}
 
   publish_release:
     name: Publish release
-    if: >
-      github.repository_owner == 'input-output-hk'
-      || startsWith(github.event.head_commit.message, 'TEST CI:')
-    needs: [create_release, build_assets]
+    needs: [release_info, build_assets]
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
+      - name: Check out the repository
         uses: actions/checkout@v2
 
       - name: Publish release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          release_tag=${GITHUB_REF#refs/tags/}
           hub release edit --draft=false \
-            -m 'Release ${{ needs.create_release.outputs.version }}' \
-            $release_tag
+            -m 'Release ${{ needs.release_info.outputs.version }}' \
+            ${GITHUB_REF#refs/tags/}
