--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,74 +1,95 @@
 on:
-  release:
-    types: [created, prereleased]
+  schedule:
+    - cron: '0 3 * * *' # Nightly, run at 03:00 UTC
+  push:
+    tags:
+      - 'v[0-9]+.*' # Release tags matching v*, i.e. v1.0, v20.15.10
+    branches:
+      - 'ci/test/nightly' # For testing nightly build workflow
 
-name: Release Builder
+name: Release
 
 jobs:
 
-  release_info:
-    name: Get release information
+  create_release:
+    name: Create release
+    if: >
+      github.repository_owner == 'input-output-hk'
+      || startsWith(github.ref, 'refs/heads/ci/test/')
+      || startsWith(github.ref, 'refs/tags/') && contains(github.ref, '-ci-test.')
     runs-on: ubuntu-latest
     outputs:
-      version: ${{ steps.get_version.outputs.version }}
+      version: ${{ steps.release_info.outputs.version }}
+      tag: ${{ steps.release_info.outputs.tag }}
+      date: ${{ steps.release_info.outputs.date }}
+      upload_url: ${{ steps.create_release.outputs.upload_url }}
     steps:
-      - id: get_version
-        name: Get version
-        shell: python
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - id: release_info
+        name: Get release information
+        run: python3 ci/release-info.py "$GITHUB_EVENT_NAME"
+
+      - if: ${{ steps.release_info.outputs.release_type == 'nightly' }}
+        name: Delete existing nightly releases
+        continue-on-error: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          from __future__ import print_function
-          import json, os, re, sys
-          from subprocess import Popen, PIPE
-          tag = re.sub(r'^refs/tags/', '', os.getenv('GITHUB_REF'))
-          match = re.match(r'v(\d+\.\d+\.\d+(-.*)?)$', tag)
-          if match:
-            version = match.group(1)
-          else:
-            match = re.match(r'nightly\.\d{6}$', tag)
-            if match:
-              p = Popen(
-                'cargo read-manifest --manifest-path jormungandr/Cargo.toml',
-                shell=True,
-                stdout=PIPE
-              )
-              d = json.load(p.stdout)
-              version = re.sub(
-                r'^(\d+\.\d+\.\d+)(-.*)?$',
-                r'\1-' + match.group(0),
-                d['version'],
-                count=1
-              )
-            else:
-              print('::error::unrecognized release tag format {0}'.format(tag))
-              sys.exit(1)
-          print('::set-output name=version::' + version)
+          set +e
+          git ls-remote --tags --refs origin 'refs/tags/nightly*' |
+          cut -f 2 |
+          while read ref; do
+            hub release delete ${ref#refs/tags/}
+            git push --delete origin $ref
+          done
+
+      - id: create_release
+        name: Create a draft release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          release_tag='${{ steps.release_info.outputs.tag }}'
+          hub release create ${{ steps.release_info.outputs.release_flags }} --draft \
+            -m "Release ${{ steps.release_info.outputs.version }} (in progress)" \
+            -t $GITHUB_SHA $release_tag
+          upload_url=$(hub release show -f '%uA' $release_tag)
+          echo "::set-output name=upload_url::$upload_url"
 
   update_deps:
     name: Update dependencies
+    if: >
+      github.repository_owner == 'input-output-hk'
+      || startsWith(github.ref, 'refs/heads/ci/test/')
+      || startsWith(github.ref, 'refs/tags/') && contains(github.ref, '-ci-test.')
     runs-on: ubuntu-latest
+    outputs:
+      crates-io-index-head: ${{ steps.ls-crates-io-index.outputs.head }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
         with:
           submodules: true
 
-      - name: Prune package versions for dependency cache key
+      - id: ls-crates-io-index
+        name: Get head commit hash of crates.io registry index
         run: |
-          perl -p - Cargo.lock > Cargo.lock.for-cache <<EOF
-            BEGIN {
-              $ln = 0; $ours = 0;
-            }
-            if (/^\[\[package\]\]/ .. ($ln == 2)) {
-              if (/^name = "(jormungandr.*|jcli)"/) {
-                $ours = 1;
-              } else {
-                s/^version =.*// if $ours;
-              }
-              ++$ln;
-            } else {
-              $ln = 0; $ours = 0;
-            }
-          EOF
+          commit=$(
+            git ls-remote --heads https://github.com/rust-lang/crates.io-index.git master |
+            cut -f 1
+          )
+          echo "::set-output name=head::$commit"
+
+      - name: Cache cargo registry index
+        uses: actions/cache@v2
+        with:
+          path: ~/.cargo/registry/index
+          key: cargo-index-${{ steps.ls-crates-io-index.outputs.head }}
+          restore-keys: cargo-index-
+
+      - name: Prune own package versions for dependency cache key
+        run: ci/strip-own-version-from-cargo-lock.pl Cargo.lock > Cargo.lock.for-cache
 
       - name: Upload dependency cache key
         uses: actions/upload-artifact@v2
@@ -76,41 +97,20 @@ jobs:
           name: deps-keyfile
           path: Cargo.lock.for-cache
 
-      - id: cargo-registry
-        name: Cache cargo registry
+      - id: cargo-deps
+        name: Cache cargo dependencies
         uses: actions/cache@v2
         with:
-          path: |
-            ~/.cargo/registry/index
-            ~/.cargo/registry/cache
-          key: cargo-registry-${{ hashFiles('Cargo.lock.for-cache') }}
+          path: ~/.cargo/registry/cache
+          key: cargo-deps-${{ hashFiles('Cargo.lock.for-cache') }}
 
-      - if: ${{ steps.cargo-registry.outputs.cache-hit != 'true' }}
-        id: ls-crates-io-index
-        name: Get head commit hash of crates.io registry index
-        continue-on-error: true
-        shell: bash
-        run: |
-          commit=$(
-            git ls-remote --heads https://github.com/rust-lang/crates.io-index.git master |
-            cut -f 1
-          )
-          echo "::set-output name=head::$commit"
-      - if: ${{ steps.cargo-registry.outputs.cache-hit != 'true' }}
-        name: Cache cargo registry index
-        uses: actions/cache@v2
-        with:
-          path: ~/.cargo/registry/index
-          key: cargo-index-${{ steps.ls-crates-io-index.outputs.head }}
-          restore-keys: cargo-index-
-
-      - if: ${{ steps.cargo-registry.outputs.cache-hit != 'true' }}
+      - if: ${{ steps.cargo-deps.outputs.cache-hit != 'true' }}
         name: Fetch dependencies
         run: cargo fetch --locked
 
   build_assets:
     name: Build assets
-    needs: [release_info, update_deps]
+    needs: [create_release, update_deps]
     runs-on: ${{ matrix.config.os }}
     strategy:
       fail-fast: false
@@ -193,13 +193,18 @@ jobs:
         with:
           name: deps-keyfile
 
-      - name: Restore cargo registry
+      - name: Restore cargo registry index
         uses: actions/cache@v2
         with:
-          path: |
-            ~/.cargo/registry/index
-            ~/.cargo/registry/cache
-          key: cargo-registry-${{ hashFiles('Cargo.lock.for-cache') }}
+          path: ~/.cargo/registry/index
+          key: cargo-index-${{ needs.update_deps.outputs.crates-io-index-head }}
+          restore-keys: cargo-index-
+
+      - name: Restore cargo dependencies
+        uses: actions/cache@v2
+        with:
+          path: ~/.cargo/registry/cache
+          key: cargo-deps-${{ hashFiles('Cargo.lock.for-cache') }}
 
       - name: Create .cargo/config.toml
         shell: bash
@@ -219,13 +224,10 @@ jobs:
           passthrough = ["DATE"]
           EOF
 
-      - name: Get current date
-        shell: bash
-        run: |
-          echo "::set-env name=DATE::$(date +%Y%m%d)"
-
       - name: Build jormungandr
         uses: actions-rs/cargo@v1
+        env:
+          DATE: ${{ needs.create_release.outputs.date }}
         with:
           use-cross: ${{ matrix.cross }}
           command: build
@@ -240,6 +242,8 @@ jobs:
 
       - name: Build jcli
         uses: actions-rs/cargo@v1
+        env:
+          DATE: ${{ needs.create_release.outputs.date }}
         with:
           use-cross: ${{ matrix.cross }}
           command: build
@@ -254,7 +258,7 @@ jobs:
       - name: Pack binaries (Unix)
         if: matrix.config.os != 'windows-latest'
         run: |
-          archive=jormungandr-${{ needs.release_info.outputs.version }}-${{ matrix.config.target }}-${{ matrix.target_cpu }}.tar.gz
+          archive=jormungandr-${{ needs.create_release.outputs.version }}-${{ matrix.config.target }}-${{ matrix.target_cpu }}.tar.gz
           tar -C ./target/${{ matrix.config.target }}/release -czvf $archive jormungandr jcli
           echo "::set-env name=RELEASE_ARCHIVE::$archive"
           echo "::set-env name=RELEASE_CONTENT_TYPE::application/gzip"
@@ -262,7 +266,7 @@ jobs:
       - name: Pack binaries (Windows)
         if: matrix.config.os == 'windows-latest'
         run: |
-          $archive = "jormungandr-${{ needs.release_info.outputs.version }}-${{ matrix.config.target }}-${{ matrix.target_cpu }}.zip"
+          $archive = "jormungandr-${{ needs.create_release.outputs.version }}-${{ matrix.config.target }}-${{ matrix.target_cpu }}.zip"
           $args = @{
             Path  = "./target/${{ matrix.config.target }}/release/jormungandr.exe",
                     "./target/${{ matrix.config.target }}/release/jcli.exe"
@@ -277,14 +281,14 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ github.event.release.upload_url }}
+          upload_url: ${{ needs.create_release.outputs.upload_url }}
           asset_path: ./${{ env.RELEASE_ARCHIVE }}
           asset_name: ${{ env.RELEASE_ARCHIVE }}
           asset_content_type: ${{ env.RELEASE_CONTENT_TYPE }}
 
   publish_release:
     name: Publish release
-    needs: [release_info, build_assets]
+    needs: [create_release, build_assets]
     runs-on: ubuntu-latest
     steps:
       - name: Check out the repository
@@ -295,5 +299,5 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           hub release edit --draft=false \
-            -m 'Release ${{ needs.release_info.outputs.version }}' \
-            ${GITHUB_REF#refs/tags/}
+            -m 'Release ${{ needs.create_release.outputs.version }}' \
+            ${{ needs.create_release.outputs.tag }}
