--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,6 @@ on:
 name: Release
 
 jobs:
-
   create_release:
     name: Create release
     if: >
@@ -96,12 +95,7 @@ jobs:
   update_deps:
     name: Update dependencies
     needs: cache_info
-    # Caches on Windows and Unix do not interop:
-    # https://github.com/actions/cache/issues/330#issuecomment-637701649
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest]
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     steps:
       - name: Cache cargo registry index
         uses: actions/cache@v2
@@ -135,66 +129,12 @@ jobs:
       fail-fast: false
       matrix:
         config:
-          # Linux
-          - {os: ubuntu-latest, target: x86_64-unknown-linux-gnu}
           # Macos
-          - {os: macos-latest, target: x86_64-apple-darwin}
-        target_cpu: [generic, broadwell]
+          - { os: macos-latest, target: x86_64-apple-darwin }
+        target_cpu: [generic]
         toolchain: [stable]
         cross: [false]
-        include:
-          # Windows
-          - config: {os: windows-latest, target: x86_64-pc-windows-gnu}
-            target_cpu: generic
-            toolchain: stable-x86_64-pc-windows-gnu
-            cross: false
-          - config: {os: windows-latest, target: x86_64-pc-windows-gnu}
-            target_cpu: broadwell
-            toolchain: stable-x86_64-pc-windows-gnu
-            cross: false
-          - config: {os: windows-latest, target: x86_64-pc-windows-msvc}
-            target_cpu: generic
-            toolchain: stable-x86_64-pc-windows-msvc
-            cross: false
-          - config: {os: windows-latest, target: x86_64-pc-windows-msvc}
-            target_cpu: broadwell
-            toolchain: stable-x86_64-pc-windows-msvc
-            cross: false
-          # Cross targets
-          - config: {os: ubuntu-latest, target: aarch64-unknown-linux-gnu}
-            target_cpu: generic
-            toolchain: stable
-            cross: true
-          - config: {os: ubuntu-latest, target: arm-unknown-linux-gnueabi}
-            target_cpu: generic
-            toolchain: stable
-            cross: true
-          - config: {os: ubuntu-latest, target: armv7-unknown-linux-gnueabihf}
-            target_cpu: generic
-            toolchain: stable
-            cross: true
-          - config: {os: ubuntu-latest,  target: x86_64-unknown-linux-musl}
-            target_cpu: generic
-            toolchain: stable
-            cross: true
-          - config: {os: ubuntu-latest,  target: x86_64-unknown-linux-musl}
-            target_cpu: broadwell
-            toolchain: stable
-            cross: true
-          - config: {os: ubuntu-latest, target: aarch64-linux-android}
-            target_cpu: generic
-            toolchain: stable
-            cross: true
-          # - config: {os: ubuntu-latest, target: mips64el-unknown-linux-gnuabi64}
-          #   target_cpu: generic
-          #   toolchain: stable
-          #   cross: true
-          # - config: {os: ubuntu-latest, target: powerpc64le-unknown-linux-gnu}
-          #   target_cpu: generic
-          #   toolchain: stable
-          #   cross: true
     steps:
-
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: ${{ matrix.toolchain }}
@@ -270,8 +210,12 @@ jobs:
             --release
             --target ${{ matrix.config.target }}
 
-      - name: Pack binaries (Unix)
-        if: matrix.config.os != 'windows-latest'
+      - name: Checksum binaries
+        run: |
+          cd target/${{ matrix.config.target }}/release
+          shasum jormungandr jcli > ${{ runner.temp }}/checksum
+
+      - name: Pack binaries
         run: |
           archive=jormungandr-${{ needs.create_release.outputs.version }}-${{ matrix.config.target }}-${{ matrix.target_cpu }}.tar.gz
           tar -C ./target/${{ matrix.config.target }}/release -czvf $archive jormungandr jcli
@@ -280,20 +224,12 @@ jobs:
           RELEASE_CONTENT_TYPE=application/gzip
           EOF
 
-      - name: Pack binaries (Windows)
-        if: matrix.config.os == 'windows-latest'
+      - name: Unpack and verify checksum
         run: |
-          $archive = "jormungandr-${{ needs.create_release.outputs.version }}-${{ matrix.config.target }}-${{ matrix.target_cpu }}.zip"
-          $args = @{
-            Path  = "./target/${{ matrix.config.target }}/release/jormungandr.exe",
-                    "./target/${{ matrix.config.target }}/release/jcli.exe"
-            DestinationPath = $archive
-          }
-          Compress-Archive @args
-          @"
-          RELEASE_ARCHIVE=$archive
-          RELEASE_CONTENT_TYPE=application/zip
-          "@ | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+          mkdir archive-test
+          tar -C archive-test -xzvf $RELEASE_ARCHIVE
+          cd archive-test
+          shasum -c ${{ runner.temp }}/checksum
 
       - name: Upload binaries to the release
         uses: actions/upload-release-asset@v1
