--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -1,6 +1,6 @@
 on:
-  schedule:
-    - cron: '0 3 * * *' # run at 3 AM UTC
+  # schedule:
+  #   - cron: '0 3 * * *' # run at 3 AM UTC
 
 name: Nightly Release
 
