--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,143 +1,137 @@
+
 on:
+  # schedule:
+  #   - cron: '0 3 * * *' # Nightly, run at 03:00 UTC
   push:
     tags:
-      - 'v[0-9]+.*' # Push events to matching v*, i.e. v1.0, v20.15.10
+      - 'v[0-9]+.*' # Release tags matching v*, i.e. v1.0, v20.15.10
+  workflow_dispatch:
+    # branches:
+    #   - 'ci/test/nightly' # For testing nightly build workflow
 
 name: Release
 
 jobs:
-  initial_release:
-    name: Create base release
-    if: ${{ github.repository_owner == 'input-output-hk' }}
+  create_release:
+    name: Create release
+    if: >
+      github.repository_owner == 'input-output-hk'
+      || startsWith(github.ref, 'refs/heads/ci/test/')
+      || startsWith(github.ref, 'refs/tags/') && contains(github.ref, '-ci-test.')
     runs-on: ubuntu-latest
     outputs:
+      version: ${{ steps.release_info.outputs.version }}
+      tag: ${{ steps.release_info.outputs.tag }}
+      date: ${{ steps.release_info.outputs.date }}
       upload_url: ${{ steps.create_release.outputs.upload_url }}
-    steps:
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          draft: false
-          prerelease: false
-
-  update_deps:
-    name: Update dependencies
-    if: ${{ github.repository_owner == 'input-output-hk' }}
-    runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
         with:
-          submodules: true
+          submodules: 'true'
 
-      - id: cargo-registry
-        name: Cache cargo registry
-        uses: actions/cache@v1
-        with:
-          path: ~/.cargo/registry
-          key: cargo-registry-${{ hashFiles('Cargo.lock') }}
+      - id: release_info
+        name: Get release information
+        run: python3 ci/release-info.py "$GITHUB_EVENT_NAME"
 
-      - if: ${{ steps.cargo-registry.outputs.cache-hit != 'true' }}
-        id: ls-crates-io-index
-        name: Get head commit hash of crates.io registry index
+      - if: ${{ steps.release_info.outputs.release_type == 'nightly' }}
+        name: Delete existing nightly releases
         continue-on-error: true
-        shell: bash
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          set +e
+          git ls-remote --tags --refs origin 'refs/tags/nightly*' |
+          cut -f 2 |
+          while read ref; do
+            hub release delete ${ref#refs/tags/}
+            git push --delete origin $ref
+          done
+      - id: create_release
+        name: Create a draft release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          release_tag='${{ steps.release_info.outputs.tag }}'
+          hub release create ${{ steps.release_info.outputs.release_flags }} --draft \
+            -m "Release ${{ steps.release_info.outputs.version }} (in progress)" \
+            -t $GITHUB_SHA $release_tag
+          upload_url=$(hub release show -f '%uA' $release_tag)
+          echo "::set-output name=upload_url::$upload_url"
+  cache_info:
+    name: Bootstrap cache
+    if: >
+      github.repository_owner == 'input-output-hk'
+      || startsWith(github.ref, 'refs/heads/ci/test/')
+      || startsWith(github.ref, 'refs/tags/') && contains(github.ref, '-ci-test.')
+    runs-on: ubuntu-latest
+    outputs:
+      crates-io-index-head: ${{ steps.ls-crates-io-index.outputs.head }}
+      cargo-lock-hash: ${{ steps.hash-cargo-lock.outputs.hash }}
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - id: ls-crates-io-index
+        name: Get head commit hash of crates.io registry index
         run: |
           commit=$(
             git ls-remote --heads https://github.com/rust-lang/crates.io-index.git master |
             cut -f 1
           )
+          echo "$commit"
           echo "::set-output name=head::$commit"
-      - if: ${{ steps.cargo-registry.outputs.cache-hit != 'true' }}
-        name: Cache cargo registry index
-        uses: actions/cache@v1
+      - id: hash-cargo-lock
+        name: Calculate dependency cache key
+        run: |
+          hash=$(
+            ci/strip-own-version-from-cargo-lock.pl Cargo.lock |
+            sha1sum | cut -d ' ' -f 1
+          )
+          echo "$hash"
+          echo "::set-output name=hash::$hash"
+  update_deps:
+    name: Update dependencies
+    needs: cache_info
+    runs-on: ubuntu-latest
+    steps:
+      - name: Cache cargo registry index
+        uses: actions/cache@v2
         with:
           path: ~/.cargo/registry/index
-          key: cargo-index-${{ steps.ls-crates-io-index.outputs.head }}
-          restore-keys: |
-            cargo-index-
+          key: cargo-index-${{ needs.cache_info.outputs.crates-io-index-head }}
+          restore-keys: cargo-index-
 
-      - if: ${{ steps.cargo-registry.outputs.cache-hit != 'true' }}
-        name: Fetch dependencies
+      - id: cargo-deps
+        name: Cache cargo dependencies
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.cargo/registry/cache
+            ~/.cargo/git/db
+          key: cargo-deps-v1-${{ needs.cache_info.outputs.cargo-lock-hash }}
+
+      - name: Check out the repository
+        uses: actions/checkout@v2
+        with:
+          submodules: true
+
+      - name: Fetch dependencies and update cargo registry
         run: cargo fetch --locked
 
-      - if: ${{ steps.cargo-registry.outputs.cache-hit != 'true' }}
-        name: Prune unpacked sources of dependency crates from cache
-        shell: bash
-        run: |
-          rm -rf ~/.cargo/registry/src
-
-  release_assets:
-    name: Release assets
-    if: ${{ github.repository_owner == 'input-output-hk' }}
-    needs: [initial_release, update_deps]
+  build_assets:
+    name: Build assets
+    needs: [create_release, cache_info, update_deps]
     runs-on: ${{ matrix.config.os }}
     strategy:
       fail-fast: false
       matrix:
         config:
-          # Linux
-          - {os: ubuntu-latest, target: x86_64-unknown-linux-gnu}
           # Macos
-          - {os: macos-latest, target: x86_64-apple-darwin}
-        target_cpu: [generic, broadwell]
+          - { os: macos-latest, target: x86_64-apple-darwin }
+        target_cpu: [generic]
         toolchain: [stable]
         cross: [false]
-        include:
-          # Windows
-          - config: {os: windows-latest, target: x86_64-pc-windows-gnu}
-            target_cpu: generic
-            toolchain: stable-x86_64-pc-windows-gnu
-            cross: false
-          - config: {os: windows-latest, target: x86_64-pc-windows-gnu}
-            target_cpu: broadwell
-            toolchain: stable-x86_64-pc-windows-gnu
-            cross: false
-          - config: {os: windows-latest, target: x86_64-pc-windows-msvc}
-            target_cpu: generic
-            toolchain: stable-x86_64-pc-windows-msvc
-            cross: false
-          - config: {os: windows-latest, target: x86_64-pc-windows-msvc}
-            target_cpu: broadwell
-            toolchain: stable-x86_64-pc-windows-msvc
-            cross: false
-          # Cross targets
-          - config: {os: ubuntu-latest, target: aarch64-unknown-linux-gnu}
-            target_cpu: generic
-            toolchain: stable
-            cross: true
-          - config: {os: ubuntu-latest, target: arm-unknown-linux-gnueabi}
-            target_cpu: generic
-            toolchain: stable
-            cross: true
-          - config: {os: ubuntu-latest, target: armv7-unknown-linux-gnueabihf}
-            target_cpu: generic
-            toolchain: stable
-            cross: true
-          - config: {os: ubuntu-latest,  target: x86_64-unknown-linux-musl}
-            target_cpu: generic
-            toolchain: stable
-            cross: true
-          - config: {os: ubuntu-latest,  target: x86_64-unknown-linux-musl}
-            target_cpu: broadwell
-            toolchain: stable
-            cross: true
-          - config: {os: ubuntu-latest, target: aarch64-linux-android}
-            target_cpu: generic
-            toolchain: stable
-            cross: true
-          # - config: {os: ubuntu-latest, target: mips64el-unknown-linux-gnuabi64}
-          #   target_cpu: generic
-          #   toolchain: stable
-          #   cross: true
-          # - config: {os: ubuntu-latest, target: powerpc64le-unknown-linux-gnu}
-          #   target_cpu: generic
-          #   toolchain: stable
-          #   cross: true
     steps:
       - uses: actions-rs/toolchain@v1
         with:
@@ -151,25 +145,19 @@ jobs:
         with:
           submodules: true
 
-      # https://github.com/actions/runner/issues/498
-      - if: ${{ runner.os == 'Windows' }}
-        name: Fix up Cargo.lock hash
-        shell: powershell
-        run: |
-          ((Get-Content Cargo.lock) -join "`n") + "`n" |
-          Set-Content -NoNewline Cargo.lock
-
-      # https://github.com/actions/virtual-environments/issues/895
-      # https://github.com/actions/virtual-environments/issues/936
-      - if: ${{ runner.os == 'Windows' }}
-        name: Clean up cargo registry files
-        run: rm -r -fo $env:UserProfile\.cargo\registry
-
-      - name: Restore cargo registry
-        uses: actions/cache@v1
+      - name: Restore cargo registry index
+        uses: actions/cache@v2
         with:
-          path: ~/.cargo/registry
-          key: cargo-registry-${{ hashFiles('Cargo.lock') }}
+          path: ~/.cargo/registry/index
+          key: cargo-index-${{ needs.cache_info.outputs.crates-io-index-head }}
+
+      - name: Restore cargo dependencies
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.cargo/registry/cache
+            ~/.cargo/git/db
+          key: cargo-deps-v1-${{ needs.cache_info.outputs.cargo-lock-hash }}
 
       - name: Create .cargo/config.toml
         shell: bash
@@ -177,15 +165,24 @@ jobs:
           mkdir .cargo
           cat > .cargo/config.toml <<EOF
           [target.${{ matrix.config.target }}]
-          rustflags = ["-C", "target-cpu=${{ matrix.target_cpu }}", "-C", "lto"]
+          rustflags = ["-C", "target-cpu=${{ matrix.target_cpu }}", "-C", "lto", "-C", "embed-bitcode=yes"]
           EOF
-
+      - if: ${{ matrix.cross }}
+        name: Create Cross.toml
+        shell: bash
+        run: |
+          cat > Cross.toml <<EOF
+          [build.env]
+          passthrough = ["DATE"]
+          EOF
       - name: Build jormungandr
         uses: actions-rs/cargo@v1
+        env:
+          DATE: ${{ needs.create_release.outputs.date }}
         with:
           use-cross: ${{ matrix.cross }}
           command: build
-          args: |
+          args: >
             --manifest-path jormungandr/Cargo.toml
             --bin jormungandr
             --no-default-features
@@ -193,52 +190,62 @@ jobs:
             --locked
             --release
             --target ${{ matrix.config.target }}
-
       - name: Build jcli
         uses: actions-rs/cargo@v1
+        env:
+          DATE: ${{ needs.create_release.outputs.date }}
         with:
           use-cross: ${{ matrix.cross }}
           command: build
-          args: |
+          args: >
             --manifest-path jcli/Cargo.toml
             --bin jcli
             --verbose
             --locked
             --release
             --target ${{ matrix.config.target }}
-
-      - name: Get tag version
-        id: get_version
-        run: echo "::set-output name=version::${GITHUB_REF#refs/tags/}"
-        shell: bash
-
-      - name: Pack binaries (Unix)
-        if: matrix.config.os != 'windows-latest'
+      - name: Checksum binaries
         run: |
-          archive=jormungandr-${{ steps.get_version.outputs.version }}-${{ matrix.config.target }}-${{ matrix.target_cpu }}.tar.gz
+          cd target/${{ matrix.config.target }}/release
+          shasum jormungandr jcli > ${{ runner.temp }}/checksum
+      # - run: sleep 10
+
+      - name: Pack binaries
+        run: |
+          archive=jormungandr-${{ needs.create_release.outputs.version }}-${{ matrix.config.target }}-${{ matrix.target_cpu }}.tar.gz
           tar -C ./target/${{ matrix.config.target }}/release -czvf $archive jormungandr jcli
-          echo "::set-env name=RELEASE_ARCHIVE::$archive"
-          echo "::set-env name=RELEASE_CONTENT_TYPE::application/gzip"
-
-      - name: Pack binaries (Windows)
-        if: matrix.config.os == 'windows-latest'
+          cat <<EOF >> $GITHUB_ENV
+          RELEASE_ARCHIVE=$archive
+          RELEASE_CONTENT_TYPE=application/gzip
+          EOF
+      - name: Unpack and verify checksum
         run: |
-          $archive = "jormungandr-${{ steps.get_version.outputs.version }}-${{ matrix.config.target }}-${{ matrix.target_cpu }}.zip"
-          $args = @{
-            Path  = "./target/${{ matrix.config.target }}/release/jormungandr.exe",
-                    "./target/${{ matrix.config.target }}/release/jcli.exe"
-            DestinationPath = $archive
-          }
-          Compress-Archive @args
-          echo "::set-env name=RELEASE_ARCHIVE::$archive"
-          echo "::set-env name=RELEASE_CONTENT_TYPE::application/zip"
-
-      - name: Upload binaries to release
+          mkdir archive-test
+          tar -C archive-test -xzvf $RELEASE_ARCHIVE
+          cd archive-test
+          shasum -c ${{ runner.temp }}/checksum
+      - name: Upload binaries to the release
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ needs.initial_release.outputs.upload_url }}
+          upload_url: ${{ needs.create_release.outputs.upload_url }}
           asset_path: ./${{ env.RELEASE_ARCHIVE }}
           asset_name: ${{ env.RELEASE_ARCHIVE }}
           asset_content_type: ${{ env.RELEASE_CONTENT_TYPE }}
+
+  publish_release:
+    name: Publish release
+    needs: [create_release, build_assets]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out the repository
+        uses: actions/checkout@v2
+
+      - name: Publish release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          hub release edit --draft=false \
+            -m 'Release ${{ needs.create_release.outputs.version }}' \
+            ${{ needs.create_release.outputs.tag }}
